--- a/libft/Makefile
+++ b/libft/Makefile
@@ -4,25 +4,32 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar
 ARFLAGS = rc
 
+RM = rm -f
+
 NAME = libft.a
 HEADER = ./libft.h
 
 SRC = *.c
+SRC_BONUS = *.c
 
 OBJ = $(SRC:.c=.o)
+OBJ_BONUS = $(SRC_BONUS:.c=.o)
 
 all : $(NAME)
 
-%.o : %.c
-	$(CC) $(CFLAGS) -c $(SRC)
+.c.o : $(SRC) $(SRC_BONUS)
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+bonus : $(OBJ_BONUS)
+	$(AR) $(ARFLAGS) $(NAME)
 
 $(NAME) : $(OBJ) $(HEADER)
 	$(AR) $(ARFLAGS) $@ $^
 
 clean :
-	rm -f $(OBJ)
+	$(RM) $(OBJ) $(OBJ_BONUS)
 
 fclean : clean
-	rm -f $(NAME)
+	$(RM) $(NAME)
 
 re : fclean all
