--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -6,30 +6,21 @@ ARFLAGS = rc
 
 RM = rm -f
 
-NAME = libftprintf.a
-HEADER = ../ft_printf.h
+NAME = libft.a
+HEADER = libft.h
 
-SRC = 
-
-SRC_BONUS = 
+SRC = ft_atoi.c ft_itoa.c ft_strchr.c
 
 OBJ = $(SRC:.c=.o)
-OBJ_BONUS = $(SRC_BONUS:.c=.o)
 
 all : $(NAME)
 
 $(NAME) : $(OBJ) $(HEADER)
 	$(AR) $(ARFLAGS) $@ $^
 
-bonus : $(OBJ) $(OBJ_BONUS) $(HEADER)
-	$(AR) $(ARFLAGS) $(NAME) $^
-
 $(OBJ) : $(SRC)
 	$(CC) $(CFLAGS) -c $^
 	
-$(OBJ_BONUS) : $(SRC_BONUS)
-	$(CC) $(CFLAGS) -c $^
-
 clean :
 	$(RM) $(OBJ) $(OBJ_BONUS)
 
@@ -38,4 +29,4 @@ fclean : clean
 
 re : fclean all
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re 
