--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -7,14 +7,15 @@ ARFLAGS = rc
 RM = rm -f
 
 NAME = libftprintf.a
-HEADER = ft_printf.h
+HEADER = ./ft_printf.h
 
 SRC = ft_printf.c \
     ft_atoi.c \
     ft_flag_d.c \
     ft_itoa.c \
     ft_parsing.c \
-    ft_type.c
+    ft_type.c \
+	ft_len.c
 
 OBJ = $(SRC:.c=.o)
 
