Move ft_flag_d t o ft_print_d

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -11,7 +11,7 @@ HEADER = ./ft_printf.h
 
 SRC = ft_printf.c \
     ft_atoi.c \
-    ft_flag_d.c \
+    ft_print_d.c \
     ft_itoa.c \
     ft_parsing.c \
     ft_type.c \
