Renewal ft_printf

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,35 +1,45 @@
+NAME = libftprintf.a
+
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 AR = ar
 ARFLAGS = rc
 
-RM = rm -f
+RM = rm -rf
 
-NAME = libftprintf.a
-HEADER = ./ft_printf.h
+SRC_NAME = ft_printf.c ft_print_d.c ft_parsing.c
+SRC_PATH = ./srcs
+SRC = $(addprefix $(SRC_PATH)/, $(SRC_NAME))
 
-SRC = ft_printf.c \
-    ft_atoi.c \
-    ft_print_d.c \
-    ft_itoa.c \
-    ft_parsing.c \
+OBJ_NAME = $(SRC_NAME:.c=.o)
+OBJ_PATH = ./obj
+OBJ = $(addprefix $(OBJ_PATH)/, $(OBJ_NAME))
 
-OBJ = $(SRC:.c=.o)
+INC_LINK = -I./includes
+
+LIBFT = -L./libft -lft
 
 all : $(NAME)
 
-$(NAME) : $(OBJ) $(HEADER)
-	$(AR) $(ARFLAGS) $@ $^
+$(NAME) : $(OBJ) libft
+	$(CC) $(CFLAGS) $(OBJ) $(INC_LINK) $(LIBFT) -o $(NAME)
+	# $(AR) $(ARFLAGS) $@ $^
 
-$(OBJ) : $(SRC)
-	$(CC) $(CFLAGS) -c $^
-	
-clean :
-	$(RM) $(OBJ)
+$(OBJ_PATH)/%.o : $(SRC_PATH)/%.c
+	@mkdir $(OBJ_PATH) 2> /dev/null || true
+	$(CC) $(CFLAGS) $(INC_LINK) -o $@ -c $<
 
-fclean : clean
-	$(RM) $(NAME)
+libft:
+	@$(MAKE) -C ./libft all
+
+clean:
+	@$(MAKE) -C ./libft clean
+	$(RM) $(OBJ_PATH)
+
+fclean :
+	@$(MAKE) -C ./libft fclean
+	$(RM) $(OBJ_PATH) $(NAME)
 
 re : fclean all
 
