--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -17,29 +17,18 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
 	  ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar.c \
 	  ft_putstr.c ft_putendl.c ft_putnbr.c ft_memccpy.c ft_size.c
 
-SRC_BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
-			ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
-			ft_lstmap.c
-
 OBJ = $(SRC:.c=.o)
-OBJ_BONUS = $(SRC_BONUS:.c=.o)
 
 all : $(NAME)
 
 $(NAME) : $(OBJ) $(HEADER)
 	$(AR) $(ARFLAGS) $@ $^
 
-bonus : $(OBJ) $(OBJ_BONUS) $(HEADER)
-	$(AR) $(ARFLAGS) $(NAME) $^
-
 $(OBJ) : $(SRC)
 	$(CC) $(CFLAGS) -c $^
 	
-$(OBJ_BONUS) : $(SRC_BONUS)
-	$(CC) $(CFLAGS) -c $^
-
 clean :
-	$(RM) $(OBJ) $(OBJ_BONUS)
+	$(RM) $(OBJ)
 
 fclean : clean
 	$(RM) $(NAME)
