--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -14,8 +14,7 @@ RM = rm
 RMFLAGS = -f
 
 SRCS = ft_printf.c ft_parsing.c parse_flag.c parse_wid_prec.c parse_result.c \
-	   print_d_i.c
-
+	   print_d_i.c print_percent.c
 
 OBJS = $(SRCS:.c=.o)
 
