--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -15,7 +15,7 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
 	  ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c \
 	  ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
 	  ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar.c \
-	  ft_putstr.c ft_putendl.c ft_putnbr.c ft_memccpy.c ft_size.c
+	  ft_putstr.c ft_putendl.c ft_putnbr.c ft_memccpy.c ft_size.c ft_putint.c
 
 OBJ = $(SRC:.c=.o)
 
