Infinite loop in %c

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -14,7 +14,7 @@ RM = rm
 RMFLAGS = -f
 
 SRCS = ft_printf.c ft_parsing.c parse_flag.c parse_wid_prec.c parse_result.c \
-	   print_num.c itoa_base.c
+	   print_num.c print_char.c print_str.c itoa_base.c
 
 OBJS = $(SRCS:.c=.o)
 
