--- a/ft_server/Dockerfile
+++ b/ft_server/Dockerfile
@@ -2,9 +2,8 @@ FROM	debian:buster
 
 LABEL	maintainer="yeslee@student.42seoul.kr"	
 
-RUN		apt-get update;\
-		apt-get upgrade -y;\
-		apt-get install -y nginx\
+RUN		apt-get update && apt-get install -y \
+		nginx\
 		openssl\
 		vim\
 		php-fpm\
@@ -18,13 +17,11 @@ RUN		wget https://wordpress.org/latest.tar.gz;\
 		tar -xvf phpMyAdmin-5.0.2-all-languages.tar.gz;\
 		tar -xvf latest.tar.gz
 
-RUN		openssl req -x509 -newkey rsa:4096 -nodes -sha256 -keyout ft_server.key -out ft_server.crt -days 365 -subj "/C=KR/ST=SEOUL/L=SEOUL/O=42/OU=yeslee/CN=localhost"
-
 COPY	/srcs/run.sh /
 COPY	/srcs/default /
 COPY	/srcs/config.inc.php /
 COPY	/srcs/wp-config.php /
 
-CMD		bash run.sh
-
 EXPOSE	80 443
+
+CMD		bash run.sh
