--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,14 +6,15 @@
 #    By: yeslee <yeslee@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/07 14:38:08 by yeslee            #+#    #+#              #
-#    Updated: 2021/03/08 21:29:18 by yeslee           ###   ########.fr        #
+#    Updated: 2021/03/11 21:27:40 by yeslee           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 all:
 	gcc -L ./mlx -lmlx -framework OpenGL -framework AppKit \
 		cub3d.h init.c main.c \
-		exception_handling.c map_parsing.c put_size_img_color.c \
+		exception_handling.c map_parsing_1.c map_parsing_2.c \
+		put_size_img_color.c \
 		include/get_next_line/get_next_line.c \
 		include/get_next_line/get_next_line_utils.c \
 		include/get_next_line/get_next_line.h \
@@ -22,5 +23,6 @@ all:
 		include/libft/ft_strchr.c \
 		include/libft/ft_strlen.c \
 		include/libft/ft_strnstr.c \
-		include/libft/ft_atoi.c
+		include/libft/ft_atoi.c \
+		include/libft/ft_isdigit.c
 	./a.out map.cub
