Start untextured_raycast

--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,7 +6,7 @@
 #    By: yeslee <yeslee@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/07 14:38:08 by yeslee            #+#    #+#              #
-#    Updated: 2021/03/21 23:36:15 by yeslee           ###   ########.fr        #
+#    Updated: 2021/03/23 11:07:27 by yeslee           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,4 +26,5 @@ all:
 		include/libft/ft_strnstr.c \
 		include/libft/ft_atoi.c \
 		include/libft/ft_isdigit.c \
-		include/libft/ft_strdup.c
+		include/libft/ft_strdup.c \
+		loop/untextured_raycast.c
