--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -1,36 +1,73 @@
-all:
-	gcc -L ./mlx -lmlx -framework AppKit -fsanitize=address -g3 \
-		cub3d.h \
-		srcs/parse_init.c \
-		main.c \
-		srcs/exception_handling.c \
-		srcs/map_parsing_1.c \
-		srcs/map_parsing_2.c \
-		srcs/put_size_img_color.c \
-		srcs/map_validation.c \
-		include/get_next_line/get_next_line.c \
-		include/get_next_line/get_next_line_utils.c \
-		include/get_next_line/get_next_line.h \
-		include/libft/ft_strncmp.c \
-		include/libft/ft_split.c \
-		include/libft/ft_strchr.c \
-		include/libft/ft_strlen.c \
-		include/libft/ft_strnstr.c \
-		include/libft/ft_atoi.c \
-		include/libft/ft_isdigit.c \
-		include/libft/ft_strdup.c \
-		include/libft/ft_size.c \
-		include/libft/ft_calloc.c \
-		include/libft/ft_memset.c \
-		srcs/mlx_init.c \
-		srcs/mlx_init_2.c \
-		srcs/mlx_put.c \
-		mlx_main.c \
-		srcs/bgm.c \
-		srcs/input_key.c \
-		srcs/draw_paint.c \
-		srcs/save_bmp.c \
-		srcs/draw_sprite.c \
-		include/libft/ft_bzero.c \
-		srcs/free.c \
-		srcs/bubble_sort.c
+NAME = cub3D
+NAME_BONUS = cub3D_bonus
+
+HEADER = -I ./headers
+
+CC = gcc
+CFLAGES = -Wall -Wextra -Werror
+
+LFLAGES = -L ./mlx
+LIBS = -lmlx -framework AppKit
+
+RM = rm
+RMFLAGS = -f
+
+SRCS = ./include/get_next_line/get_next_line.c \
+	   ./include/get_next_line/get_next_line_utils.c \
+	   ./include/libft/ft_strncmp.c \
+	   ./include/libft/ft_split.c \
+	   ./include/libft/ft_strchr.c \
+	   ./include/libft/ft_strlen.c \
+	   ./include/libft/ft_strnstr.c \
+	   ./include/libft/ft_atoi.c \
+	   ./include/libft/ft_isdigit.c \
+	   ./include/libft/ft_strdup.c \
+	   ./include/libft/ft_size.c \
+	   ./include/libft/ft_calloc.c \
+	   ./include/libft/ft_memset.c \
+	   ./include/libft/ft_bzero.c \
+	   ./srcs/main.c \
+	   ./srcs/parse_init.c \
+	   ./srcs/exception_handling.c \
+	   ./srcs/map_parsing_1.c \
+	   ./srcs/map_parsing_2.c \
+	   ./srcs/put_size_img_color.c \
+	   ./srcs/map_validation.c \
+	   ./srcs/mlx_main.c \
+	   ./srcs/mlx_init.c \
+	   ./srcs/mlx_init_2.c \
+	   ./srcs/mlx_put.c \
+	   ./srcs/input_key.c \
+	   ./srcs/draw_paint.c \
+	   ./srcs/draw_sprite.c \
+	   ./srcs/bubble_sort.c \
+	   ./srcs/save_bmp.c \
+	   ./srcs/free.c \
+
+SRCS_BONUS = ./srcs/bgm.c
+
+OBJS = $(SRCS:.c=.o)
+OBJS_BONUS = $(SRCS_BONUS:.c=.o)
+
+all : $(NAME)
+
+$(NAME) : $(OBJS)
+	$(CC) $(CFLAGES) $(LFLAGES) $(LIBS) -o $@ $^
+
+bonus : $(NAME_BONUS)
+
+$(NAME_BONUS) : $(OBJS) $(OBJS_BONUS)
+	$(CC) $(CFLAGES) $(LFLAGES) $(LIBS) -o $@ $^
+
+%.o:%.c
+	$(CC) $(CFLAGES) $(HEADER) -o $@ -c $<
+
+clean :
+	$(RM) $(RMFLAGS) $(OBJS) $(OBJS_BONUS)
+
+fclean : clean
+	$(RM) $(RMFLAGS) $(NAME) $(NAME_BONUS)
+
+re : fclean all
+
+.PHONY : all fclean clean re
