--- a/cub3D/include/libft/Makefile
+++ b/cub3D/include/libft/Makefile
@@ -16,7 +16,7 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
 	  ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
 	  ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar.c \
 	  ft_putstr.c ft_putendl.c ft_putnbr.c ft_memccpy.c ft_size.c ft_putint.c \
-	  ft_putnstr.c
+	  ft_putnstr.c ft_isspace.c
 
 OBJ = $(SRC:.c=.o)
 
