--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,7 +6,10 @@ HEADER = -I ./headers
 CC = gcc
 CFLAGES = -Wall -Wextra -Werror
 
-LFLAGES = -L ./mlx
+LIBFT = ./include/libft
+LIBFT_NAME = libft.a
+
+LFLAGES = -L./mlx
 LIBS = -lmlx -framework AppKit
 
 MLX = ./mlx
@@ -17,21 +20,6 @@ RMFLAGS = -f
 
 SRCS = ./include/get_next_line/get_next_line.c \
 	   ./include/get_next_line/get_next_line_utils.c \
-	   ./include/libft/ft_strncmp.c \
-	   ./include/libft/ft_split.c \
-	   ./include/libft/ft_strchr.c \
-	   ./include/libft/ft_strlen.c \
-	   ./include/libft/ft_strnstr.c \
-	   ./include/libft/ft_atoi.c \
-	   ./include/libft/ft_isdigit.c \
-	   ./include/libft/ft_strdup.c \
-	   ./include/libft/ft_size.c \
-	   ./include/libft/ft_calloc.c \
-	   ./include/libft/ft_memset.c \
-	   ./include/libft/ft_bzero.c \
-	   ./include/libft/ft_strtrim.c \
-	   ./include/libft/ft_isspace.c \
-	   ./srcs/main.c \
 	   ./srcs/parse_init.c \
 	   ./srcs/exception_handling.c \
 	   ./srcs/map_parsing_1.c \
@@ -40,32 +28,20 @@ SRCS = ./include/get_next_line/get_next_line.c \
 	   ./srcs/map_validation.c \
 	   ./srcs/mlx_main.c \
 	   ./srcs/mlx_init.c \
+	   ./srcs/mlx_init_1.c \
 	   ./srcs/mlx_init_2.c \
 	   ./srcs/mlx_put.c \
 	   ./srcs/input_key.c \
 	   ./srcs/draw_paint.c \
 	   ./srcs/draw_sprite.c \
+	   ./srcs/draw_sprite_1.c \
 	   ./srcs/bubble_sort.c \
 	   ./srcs/save_bmp.c \
 	   ./srcs/free.c \
+	   ./srcs/main.c
 
 SRCS_BONUS = ./include/get_next_line/get_next_line.c \
 			 ./include/get_next_line/get_next_line_utils.c \
-			 ./include/libft/ft_strncmp.c \
-			 ./include/libft/ft_split.c \
-			 ./include/libft/ft_strchr.c \
-			 ./include/libft/ft_strlen.c \
-			 ./include/libft/ft_strnstr.c \
-			 ./include/libft/ft_atoi.c \
-			 ./include/libft/ft_isdigit.c \
-			 ./include/libft/ft_strdup.c \
-			 ./include/libft/ft_size.c \
-			 ./include/libft/ft_calloc.c \
-			 ./include/libft/ft_memset.c \
-			 ./include/libft/ft_bzero.c \
-			 ./include/libft/ft_strtrim.c \
-			 ./include/libft/ft_isspace.c \
-			 ./srcs/main.c \
 			 ./srcs/parse_init.c \
 			 ./srcs/exception_handling.c \
 			 ./srcs/map_parsing_1.c \
@@ -74,15 +50,18 @@ SRCS_BONUS = ./include/get_next_line/get_next_line.c \
 			 ./srcs/map_validation.c \
 			 ./srcs/mlx_main_bonus.c \
 			 ./srcs/mlx_init.c \
+			 ./srcs/mlx_init_1.c \
 			 ./srcs/mlx_init_2.c \
 			 ./srcs/mlx_put.c \
 			 ./srcs/input_key_bonus.c \
 			 ./srcs/draw_paint.c \
 			 ./srcs/draw_sprite.c \
+			 ./srcs/draw_sprite_1.c \
 			 ./srcs/bubble_sort.c \
 			 ./srcs/save_bmp.c \
 			 ./srcs/free.c \
-			 ./srcs/bgm.c
+			 ./srcs/bgm.c \
+			 ./srcs/main.c \
 
 OBJS = $(SRCS:.c=.o)
 OBJS_BONUS = $(SRCS_BONUS:.c=.o)
@@ -90,27 +69,33 @@ OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 all : $(NAME)
 
 $(NAME) : $(OBJS)
+	@make all -C $(LIBFT)
 	@make all -C $(MLX)
-	@cp $(MLX)/$(MLX_NAME) $(NAME)
-	$(CC) $(CFLAGES) $(LFLAGES) $(LIBS) -o $@ $^
-	@install_name_tool -change $(MLX_NAME) $(MLX)/$(MLX_NAME) $(NAME)
+	@cp $(LIBFT)/$(LIBFT_NAME) $(LIBFT_NAME)
+	@cp $(MLX)/$(MLX_NAME) $(MLX_NAME)
+	$(CC) $(CFLAGES) -L. -lft $(LFLAGES) $(LIBS) -o $@ $^
 
 bonus : $(NAME_BONUS)
 
 $(NAME_BONUS) : $(OBJS_BONUS)
+	@make all -C $(LIBFT)
 	@make all -C $(MLX)
-	@cp $(MLX)/$(MLX_NAME) $(NAME_BONUS)
-	$(CC) $(CFLAGES) $(LFLAGES) $(LIBS) -o $@ $^
-	@install_name_tool -change $(MLX_NAME) $(MLX)/$(MLX_NAME) $(NAME_BONUS)
+	@cp $(LIBFT)/$(LIBFT_NAME) $(LIBFT_NAME)
+	@cp $(MLX)/$(MLX_NAME) $(MLX_NAME)
+	$(CC) $(CFLAGES)  -L. -lft $(LFLAGES) $(LIBS) -o $@ $^
 
 %.o:%.c
-	@$(CC) $(CFLAGES) $(HEADER) -o $@ -c $<
+	@$(CC) $(CFLAGES) $(HEADER) -o $@ -c $<	
 
 clean :
 	$(RM) $(RMFLAGS) $(OBJS) $(OBJS_BONUS)
+	 make clean -C $(LIBFT)
+	 make clean -C $(MLX)
 
 fclean : clean
 	$(RM) $(RMFLAGS) $(NAME) $(NAME_BONUS)
+	@make fclean -C $(LIBFT)
+	 make clean -C $(MLX)
 
 re : fclean all
 
