--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -20,8 +20,8 @@ SRCS_C = ./include/get_next_line/get_next_line.c \
 		 ./srcs/check_av.c \
 		 ./srcs/s_series.c \
 		 ./srcs/r_series.c \
-		 #./srcs/rr_series.c \
-		 ./srcs/p_series.c
+		 ./srcs/rr_series.c \
+		 #./srcs/p_series.c
 
 SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./include/get_next_line/get_next_line_utils.c \
@@ -31,8 +31,8 @@ SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./srcs/check_av.c \
 		 ./srcs/s_series.c \
 		 ./srcs/r_series.c \
-		 #./srcs/rr_series.c \
-		 ./srcs/p_series.c
+		 ./srcs/rr_series.c \
+		 #./srcs/p_series.c
 
 OBJS_C = $(SRCS_C:.c=.o)
 OBJS_P = $(SRCS_P:.c=.o)
