Finish calc functions

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -15,24 +15,20 @@ RMFLAGS = -f
 SRCS_C = ./include/get_next_line/get_next_line.c \
 		 ./include/get_next_line/get_next_line_utils.c \
 		 ./srcs/main.c \
+		 ./srcs/error_handling.c \
 		 ./srcs/write_result.c \
 		 ./srcs/struct_init.c \
 		 ./srcs/check_av.c \
-		 ./srcs/s_series.c \
-		 ./srcs/r_series.c \
-		 ./srcs/rr_series.c \
-		 #./srcs/p_series.c
+		 ./srcs/actions.c \
 
 SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./include/get_next_line/get_next_line_utils.c \
 		 ./srcs/main.c \
+		 ./srcs/error_handling.c \
 		 ./srcs/write_result.c \
 		 ./srcs/struct_init.c \
 		 ./srcs/check_av.c \
-		 ./srcs/s_series.c \
-		 ./srcs/r_series.c \
-		 ./srcs/rr_series.c \
-		 #./srcs/p_series.c
+		 ./srcs/actions.c \
 
 OBJS_C = $(SRCS_C:.c=.o)
 OBJS_P = $(SRCS_P:.c=.o)
