--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -20,6 +20,7 @@ SRCS_C = ./include/get_next_line/get_next_line.c \
 		 ./srcs/check_ac_av.c \
 		 ./srcs/checker.c \
 		 ./srcs/actions.c \
+		 ./srcs/pivot.c \
 		 ./srcs/parse_init.c \
 		 ./srcs/optimize.c
 
@@ -31,6 +32,7 @@ SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./srcs/check_ac_av.c \
 		 ./srcs/checker.c \
 		 ./srcs/actions.c \
+		 ./srcs/pivot.c \
 		 ./srcs/parse_init.c \
 		 ./srcs/optimize.c
 
