--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -23,7 +23,8 @@ SRCS_C = ./include/get_next_line/get_next_line.c \
 		 ./srcs/pivot.c \
 		 ./srcs/push_swap.c \
 		 ./srcs/optimize.c \
-		 ./srcs/optimize_2.c
+		 ./srcs/optimize_4.c \
+		 ./srcs/optimize_5.c
 
 SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./include/get_next_line/get_next_line_utils.c \
@@ -36,7 +37,8 @@ SRCS_P = ./include/get_next_line/get_next_line.c \
 		 ./srcs/pivot.c \
 		 ./srcs/push_swap.c \
 		 ./srcs/optimize.c \
-		 ./srcs/optimize_2.c
+		 ./srcs/optimize_4.c \
+		 ./srcs/optimize_5.c
 
 OBJS_C = $(SRCS_C:.c=.o)
 OBJS_P = $(SRCS_P:.c=.o)
