--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -2,27 +2,10 @@ version: "3"
 
 services:
   db:
-    image: mysql:5.7
-    volumes:
-    - db_data:/var/lib/mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-
-  wordpress:
-    depends_on:
-            - db
-    image: wordpress:latest
-    ports:
-            - "8000:80"
-    restart: always
-    environment:
-        WORDPRESS_DB_HOST: db:3306
-        WORDPRESS_DB_USER: wordpress 
-        WORDPRESS_DB_PASSWORD: wordpress 
-        WORDPRESS_DB_NAME: wordpress
-volumes:
-  db_data: 
+      image: debian:buster
+      ports:
+          "443:443"
+      volumes:
+          - db_data:/var/lib/mysql
+      env_file:
+          .env
