--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD: 1234
-MYSQL_DATABASAE: wordpress
-MYSQL_USER: yeslee
-MYSQL_PASSWORD: wordpress
+MYSQL_ROOT_PASSWORD:1234
+MYSQL_DATABASAE:root
+MYSQL_USER:yeslee
+MYSQL_PASSWORD:yeslee
