--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -2,6 +2,7 @@ FROM	debian:buster
 
 RUN		apt-get update \
 		&& apt-get -y upgrade \
-		&& apt-get -y install nginx
+		&& apt-get -y install nginx \
+		&& apt-get install vim
 
-EXPOSE 443
+EXPOSE 443 443
