--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,8 @@
 FROM	debian:buster
 
-RUN		apt-get mariadb-server
+RUN		apt-get update && apt-get -y upgrade; \
+		apt-get -y install mariadb-server
+
+EXPOSE	3306
 
 ENTRYPOINT	["bash", "run.sh"]
