--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -8,16 +8,16 @@ RUN		apt-get update && apt-get -y upgrade; \
 		vim
 
 # 인증서 설정
-RUN	openssl req -newkey rsa:4096 -days 365 -nodes -x509 -subj "/C=KR/ST=Seoul/L=Yongin/O=42seoul/OU=Gam/CN=localhost" -keyout localhost.dev.key -out localhost.dev.crt
+RUN	openssl req -newkey rsa:4096 -days 365 -nodes -x509 -subj "/C=KR/ST=Seoul/L=Yongin/O=42seoul/CN=localhost" -keyout localhost.dev.key -out localhost.dev.crt
 
-COPY	./srcs/requirements/nginx/default ./tmp/
-COPY	./srcs/requirements/nginx/conf/nginx.conf ./tmp/
+COPY	default ./tmp/
+COPY	conf/nginx.conf ./tmp/
 
-RUN		mv localhost.dev.crt etc/ssl/certs; \
-		mv localhost.dev.key etc/ssl/private; \
+RUN		mv localhost.dev.crt etc/ssl/certs
+RUN		mv localhost.dev.key etc/ssl/private
 
 # 파일 소유자 권한 부여
-RUN chown -r www-data:www-data /etc/nginx
+RUN chown -R www-data:www-data /etc/nginx
 
 ENTRYPOINT ["nginx", "-g", "daemon off"]
 
