--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -10,20 +10,20 @@ services:                           # define service lists
       ports:                        # set port
           - "443:443"
 
-  db:
+  mariadb:
       image: mariadb
       volumes:
           - ./data/mysql:/var/lib/mysql
       build: requirements/mariadb
       restart: always
-      container_name: db
+      container_name: mariadb
       ports:
           - 3306
   
   wordpress:
       depends_on:
           - nginx
-          - db
+          - mariadb
       image: wordpress
       volumes:
           - ./data/html:/var/www/html
@@ -32,3 +32,6 @@ services:                           # define service lists
       container_name: wordpress
       ports:
           - 9000
+
+networks:
+    driver: bridge
